language/move-lang/tests/move_check/parser/unknown_ability_name_modifier.move
address 0x42 {
module M {
    // invalid ability name
    struct Foo has blah {}
}
}
